--- a/Chapter6_Summary.tex
+++ b/Chapter6_Summary.tex
@@ -14,35 +14,35 @@ The actual geometry of the finite element model was then obtained by cutting the
 % PML
 To simulate the open exterior domain, the perfectly matched layer (PML) technique was applied to the model using three quadratic elements in the layer thickness direction to ensure a stable performance of the PML.
 % hex-tet combination
-The acoustic domain of the model was separated into a subregion containing complex surface geometries and a main propagation region. The former subregion was meshed with tetrahedral elements and the latter with hexahedral elements, respectively. Both subregions were coupled by non-conforming interfaces. To reduce discretization error, second-order elements were used globally for the mesh.
+The acoustic domain of the model was separated into a sub-region containing complex surface geometries and a main propagation region. The former sub-region was meshed with tetrahedral elements and the latter with hexahedral elements, respectively. Both sub-regions were coupled by non-conforming interfaces. To reduce discretization error, second-order elements were used globally for the mesh.
 % frequency-dependent grid size
 The frequency range of interest for the simulation was \SIrange{100}{2000}{\hertz} resolved in one-third octave bands. To reduce the computational cost, four different grids using a frequency-dependent discretization size were prepared for the harmonic simulation.
 % computational effort the model
 By all measures, the computational cost of the finite element model was able to be kept in an adequate range with a total computation time of about 26 hours using 32 physical CPU cores if the simulations were executed in sequential order. The actual solve time of the model was shortened to about 14 hours with carefully chosen allocation of the simulation jobs. The memory requirement ranged from \SIrange{20}{260}{\giga\byte} depending on the used grid size. It could be shown that for a given amount of available memory, the upper analyzable frequency band is related inversely to the simulation domain size.
 
 % validation measurement
-As part of this thesis, the acoustic power measurement of the sound source used and the outer pressure field measurement around the car body were carried out. The former measurement provided necessary information of the input excitation for the simulation while the latter served as reference solutions for the finite element model.
+As part of this thesis, the acoustic power measurement of the sound source used and the outer pressure field measurement around the carbody were carried out. The former measurement provided necessary information for the input excitation for the simulation while the latter served as reference solutions for the finite element model.
 % obtained results
-The simulations were done using the open-source FEM software openCFS. The obtained results showed a good agreement with the validation measurement. Thereby, the average deviation per frequency band was \SI{2.4}{\decibel}. In terms of the overall sound pressure level, the mean relative error over 27 evaluation points around the car body was \SI{0.7}{\decibel}. It can be concluded from the obtained results that the developed finite element model is capable to predict the outer field pressure distribution due to the vehicle underfloor noise with acceptable accuracy.
+The simulations were done using the open-source FEM software openCFS. The obtained results showed a good agreement with the validation measurement. Thereby, the average deviation per frequency band was \SI{2.4}{\decibel}. In terms of the overall sound pressure level, the mean relative error over 27 evaluation points around the car body was \SI{0.7}{\decibel}. It can be concluded from the obtained results that the developed finite element model is able to predict the outer field pressure distribution due to the vehicle underfloor noise with acceptable accuracy.
 
 
 % parameter study
-Besides the validation of the developed finite element model, several parametric studies have been carried out within this thesis, which aimed to investigate the sensitivity of the simulation results with respect to the variation of several model parameters.
+Besides the validation of the developed finite element model, several parametric studies have been carried out within this thesis that aimed to investigate the sensitivity of the simulation results with respect to the variation of several model parameters.
 % variation of the domain size
-During the design process of the finite element model, a parameter study aimed at finding the proper size of the exterior acoustic domain was performed. It has been shown that for our problem of interest, using a domain width of \SI{1}{\meter} could already provide good numerical accuracy without increasing the computational cost extensively. The study also showed that if the area of interest moved toward the roof of the vehicle, the domain width has to be extended in order to ensure a sufficient width-to-height ratio of the propagation region, which could be a useful hint for the future model design.
+During the design process of the finite element model, a parameter study aimed at finding the proper size of the exterior acoustic domain was performed. It has been shown that for our problem of interest, using a domain width of \SI{1}{\meter} could already provide good numerical accuracy without extensively increasing the computational cost. The study also showed that if the area of interest moved toward the roof of the vehicle, the domain width has to be extended in order to ensure a sufficient width-to-height ratio of the propagation region, which could be a useful hint for the future model design.
 % variation of the model underfloor geometry
-The results obtained from the variation of the underfloor geometry pointed out that the number and type of considered underfloor components in the finite element model could affect the prediction results. Without taking the bogie into account, the simulated overall sound pressure level was overestimated at each evaluation position by about \SI{1}{\decibel} compared to the initial finite element model, which was still in an acceptable range. To increase the prediction accuracy, at least the essential underfloor components i.e.\ the bogie frame and the wheel should be included to ensure a sufficient shielding of the acoustic wave in the underfloor area.
+The results obtained from the variation of the underfloor geometry pointed out that the number and type of considered underfloor components in the finite element model could affect the prediction results. Without taking the bogie into account, the simulated overall sound pressure level was overestimated at each evaluation position by about \SI{1}{\decibel} compared to the initial finite element model, which was still in an acceptable range. To increase the prediction accuracy, at a minimum the essential underfloor components, i.e.,\ the bogie frame and the wheel should be included to ensure a sufficient shielding of the acoustic wave in the underfloor area.
 % variation of the ground impedance
-The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex-valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy, the full impedance characteristic of the absorptive surface should be known. For the case that only the absorption coefficient is provided, the surface impedance can be assumed to be real-valued.
+The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex-valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy, the full impedance characteristic of the absorptive surface should be known. In cases where only the absorption coefficient is provided, the surface impedance can be assumed to be real-valued.
 % variation of the frequency steps per one-third octave band
-Finally, the obtained results from simulations using different intermediate frequency steps per one-third octave band indicated that the number of intermediate steps could be reduced with decreasing bandwidth without strongly affecting the simulation results. It is also suggested to use at least three intermediate steps per frequency band to prevent larger deviations introduced by possibly occurring destructive interference in the pressure field of the single frequency. In terms of the overall sound pressure level, the finite element model using five intermediate steps per frequency band could already provide a comparable prediction accuracy as the initial model using nine steps while saving up almost half of the total computation time.
+Finally, the obtained results from simulations using different intermediate frequency steps per one-third octave band indicated that the number of intermediate steps could be reduced with decreasing bandwidth without strongly affecting the simulation results. It is also suggested to use at least three intermediate steps per frequency band to prevent larger deviations introduced by possibly occurring destructive interference in the pressure field of the single frequency. In terms of the overall sound pressure level, the finite element model using five intermediate steps per frequency band provide a prediction accuracy comparable to the initial model using nine steps while saving up almost half of the total computation time.
 
 \subsection*{Future work}
 % future work
 The developed finite element model in the framework of this thesis provides a good starting point for further research on the problem. Some examples of possible future research directions are:
 \begin{itemize}
-	\item Validation of the existing finite element model under real operation conditions i.e.\ against pass-by measurements in the free field or in a tunnel.
+	\item Validate the existing finite element model under real operation conditions, i.e.,\ against pass-by measurements in the free field or in a tunnel.
 	\item Extend the sound source modeling approach to real sound sources, especially to the wheel-rail interface, which is the main noise source of the vehicle under dynamic conditions.
-	\item Further investigation of the complex surface impedance, comparing the result with a validation measurement.
+	\item Investigate the complex surface impedance further, comparing the result with a validation measurement.
 	\item Apply the developed finite element modeling approach to other railway vehicle types with existing validation measurements.
 \end{itemize}
